# epilepsy-drm

./: .gitignore  Makefile  README.md  fb_sys_write_override.c  screengrab.c  shell.nix  x11glexample.c
userspace/: CMakeLists.txt  build_deps.sh  detect_image.cpp  detect_image.h  main_loop.cpp  read_image_X11.cpp  read_image_X11.h  read_image_libdrm.cpp  read_image_libdrm.h  utils.cpp  utils.h  writeimg.c
